# boat_2018

./: .gitignore  .style.yapf  .travis.yml  README.md  dependencies.sh  post.sh
boat_2018/: CMakeLists.txt  package.xml
boat_description/: CMakeLists.txt  package.xml
boat_description/launch/: interfaces_sim.launch  simulator.launch  simulator_joystick.launch  simulator_keyboard.launch
boat_description/src/: .joy.py.swp  joy.py  sim.py  sim_io.py  sim_ui.py  turtle.py  usb_joy.py  vis.py
boat_interfaces/: CMakeLists.txt  package.xml
boat_interfaces/arduino/PS4_Controller/: PS4_Controller.ino
boat_interfaces/arduino/boat_control/: anemometer_lookup_table.ino  boat_control.ino
boat_interfaces/arduino/canbus/can_listener/: can_listener.ino
boat_interfaces/arduino/canbus/can_talker/: can_talker.ino
boat_interfaces/arduino/canbus/futaba_receiver/: futaba_receiver.ino
boat_interfaces/arduino/canbus/rudder_controller/: rudder_controller.ino
boat_interfaces/arduino/canbus/sensor_breakout/: sensor_breakout.ino
boat_interfaces/arduino/compass_example/: compass_example.ino
boat_interfaces/arduino/futaba_reader/: futaba_reader.ino
boat_interfaces/arduino/jank_joystick/: jank_joystick.ino
boat_interfaces/arduino/libraries/: install.sh
boat_interfaces/arduino/libraries/mcp2515-ISO-TP/: can.h  iso_tp.h  mcp2515.cpp  mcp2515.h  mcp2515_configs.h  mcp2515_iso_tp.cpp  mcp2515_iso_tp.h
boat_interfaces/arduino/libraries/mcp2515-ISO-TP/examples/ISO TP Demo/: ISOTPDemo.ino
boat_interfaces/arduino/rosserial/boat_control/: anemometer_filter.ino  anemometer_lookup_table.ino  boat_control.ino
boat_interfaces/arduino/rosserial/compass_example/: compass_example.ino
boat_interfaces/arduino/rosserial/futaba_reader/: futaba_reader.ino
boat_interfaces/arduino/rosserial/gps_example/: gps_example.ino
boat_interfaces/challenges/: long.yaml  nav.yaml  search.yaml  station.yaml
boat_interfaces/config/: can_bus.yaml  parameters.yaml
boat_interfaces/launch/: arduino.launch  interfaces.launch  interfaces_base.launch  interfaces_ps4.launch  rc.launch  rudder_pid.launch
boat_interfaces/src/: boat_state_controller_node.py  can_interface_node.py  cantp_interface_node.py  futaba_reader.py  futaba_reader_no_inverter.py  pid.py  receiver_reader.py  rudder_node.py  tacking_action.py  tacking_node.py  winch_node.py
boat_interfaces/src/iso_tp/: iso_tp_headers.py  iso_tp_wrapper.py
boat_interfaces/tools/: connect_serial.py
boat_interfaces/tools/calibration/: .calibrate.cpp.swp  calibrate.cpp  calibrate.py  mock-compasscal.cpp  readme
boat_msgs/: CMakeLists.txt  package.xml
boat_msgs/action/: Irons.action  Layline.action  MaxVMG.action  Tacking.action
boat_msgs/msg/: BoatState.msg  Controller.msg  GPS.msg  Joy.msg  PointArray.msg  PolarPoint.msg  TackingAction.msg  TackingActionFeedback.msg  TackingActionGoal.msg  TackingActionResult.msg  TackingFeedback.msg  TackingGoal.msg  VisionTarget.msg  Waypoint.msg  WaypointArray.msg
boat_nav/: CMakeLists.txt  package.xml  setup.py
boat_nav/launch/: bringup.launch  ekf.launch  imu.launch  imu.old.launch  imu.old2.launch  imu_old.launch  localization.launch  nav.launch  nav.launch.xml  navsat_transform.launch
boat_nav/recorded_data/: gps.bag
boat_nav/src/: .navsatfix_msg_adapter_node.cpp.swp  compass_node.py  gps_parser_node.py  irons_action.py  layline_action.py  max_vmg_action.py  navigator_node.py  path_planner_node.py  path_planning_node.py  route_planning_node.py  sensor_parser_node.py  turn_to_max_vmg.py
boat_nav/src/path_planners/: __init__.py  avoid.py  config.py  long.py  nav.py  planner_base.py  search.py  station.py
boat_nav/srv/: ConvertPoint.srv
boat_simulation/: CMakeLists.txt  package.xml
boat_simulation/launch/: simulator.launch
boat_simulation/src/: camera.py  hmi_interfaces.py  ros_interfaces.py  run_simulation.py  simulation_calculations.py  simulation_data.py  ui_elements.py  utils.py  visualization_drawer.py
boat_utilities/: CMakeLists.txt  package.xml  setup.py
boat_utilities/src/boat_utilities/: __init__.py  angles.py  points.py  units.py
boat_vision/: CMakeLists.txt  package.xml
boat_vision/calibration/: head_camera.yaml
boat_vision/launch/: old_view.launch  old_vision.launch  vision.launch
boat_vision/src/: stereo_vision_node.py  tiger_vision.py  vision_parser_node.py
doxygen/: Doxyfile  py_filter
scripts/: check_code_style.sh  dependencies.sh  gen_docs.sh
