<?xml version="1.0"?>
<package format="2">
  <name>boat_2018</name>
  <version>0.0.0</version>
  <description>2018 UW Sailbot ROS Architecture</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>
  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>TODO</license>

  <url type="website">https://uwsailbot.com/</url>
  <url type="bugtracker">https://github.com/uwsailbot/boat_2018/issues</url>
  <url type="repository">https://github.com/uwsailbot/boat_2018</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>boat_description</exec_depend>
  <exec_depend>boat_interfaces</exec_depend>
  <exec_depend>boat_msgs</exec_depend>
  <exec_depend>boat_nav</exec_depend>
  <exec_depend>boat_vision</exec_depend>
  <exec_depend>boat_utilities</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>