<?xml version="1.0"?>
<package format="2">
  <name>boat_description</name>
  <version>0.0.0</version>
  <description>The boat_description package</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>boat_msgs</depend>
  <depend>boat_nav</depend>
  <depend>boat_interfaces</depend>
  <depend>boat_vision</depend>
  <depend>python-pygame</depend>
  <build_depend>roslaunch</build_depend>


</package>