<?xml version="1.0"?>
<package format="2">
  <name>boat_description</name>
  <version>0.0.0</version>
  <description>The boat_description package</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>boat_msgs</depend>
  <depend>tf</depend>
  <depend>python-pygame</depend>

  <!-- Launch file dependencies -->
  <exec_depend>boat_interfaces</exec_depend>
  <exec_depend>boat_nav</exec_depend>

  <!-- Testing Dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
