<?xml version="1.0"?>
<package format="2">
  <name>boat_interfaces</name>
  <version>0.0.0</version>
  <description>The boat_interfaces package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>boat_msgs</depend>
  <depend>rosserial_python</depend>
  <depend>std_msgs</depend>
  <build_depend>roslaunch</build_depend>

</package>