<?xml version="1.0"?>
<package format="2">
  <name>boat_interfaces</name>
  <version>0.0.0</version>
  <description>The boat_interfaces package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>boat_msgs</depend>

  <!-- Launch file dependencies -->
  <exec_depend>rosserial_python</exec_depend>

  <!-- Testing Dependencies -->
  <build_depend>roslaunch</build_depend>

</package>