<?xml version="1.0"?>
<package format="2">
  <name>boat_msgs</name>
  <version>0.0.0</version>
  <description>The boat_msgs package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rospy</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Custom Message Dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
