<?xml version="1.0"?>
<package format="2">
  <name>boat_nav</name>
  <version>0.0.0</version>
  <description>The boat_nav package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>boat_msgs</build_depend>
  <build_depend>phidgets_imu</build_depend>
  <build_depend>imu_filter_madgwick</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>robot_localization</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>boat_msgs</build_export_depend>
  <build_export_depend>phidgets_imu</build_export_depend>
  <build_export_depend>imu_filter_madgwick</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>boat_msgs</exec_depend>
  <exec_depend>phidgets_imu</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend> 
  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_localization</exec_depend>


</package>
