<?xml version="1.0"?>
<package format="2">
  <name>boat_nav</name>
  <version>0.0.0</version>
  <description>The boat_nav package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>boat_interfaces</depend>
  <depend>boat_msgs</depend>
  <depend>boat_vision</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>nodelet</depend>
  <depend>phidgets_imu</depend>
  <depend>robot_localization</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>roslaunch</build_depend>

</package>