<?xml version="1.0"?>
<package format="2">
  <name>boat_nav</name>
  <version>0.0.0</version>
  <description>The boat_nav package</description>

  <maintainer email="sbjohnst@uwaterloo.ca">Seamus Johnston</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>boat_msgs</depend>
  <depend>boat_utilities</depend>
  <depend>tf</depend>

  <!-- Launch file dependencies -->
  <exec_depend>boat_interfaces</exec_depend>
  <exec_depend>boat_vision</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Testing Dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
