<?xml version="1.0"?>
<package format="2">
  <name>boat_utilities</name>
  <version>0.0.0</version>
  <description>The boat_utilities package</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
