<?xml version="1.0"?>
<package format="2">
  <name>boat_vision</name>
  <version>0.0.0</version>
  <description>The boat_vision package</description>

  <maintainer email="mtreynolds@uwaterloo.ca">Matt Reynolds</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>boat_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Testing Dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
